--- a/step_definitions/Steps_report_verbose.cls
+++ b/step_definitions/Steps_report_verbose.cls
@@ -60,6 +60,21 @@ Public Sub When_the_example_is_reported_with_the_step_result__F52F4459A058(examp
     session.reporter.report REPORT_MSG_TYPE_STEP, example.steps(1).OriginalStepDefinition, step_expressions(1), vbNullString
 End Sub
 
+Public Sub When_the_following_step_is_reported_with_the_statu_2B48A62AC066(example_context As TContext, step_expressions As Collection)
+    'When the following step is reported with the status {string} {string}
+    Dim step As TStep
+    Dim step_list As Collection
+    Dim parent_feature As TFeature
+    Dim session As TSession
+    
+    Set session = example_context.get_value("session")
+    Set parent_feature = THelper.new_TFeature
+    parent_feature.parsed_lines = -1
+    Set step_list = TStepParser.parse_step_list(step_expressions(2), parent_feature)
+    Set step = step_list(1)
+    session.reporter.report REPORT_MSG_TYPE_STEP, step.OriginalStepDefinition, step_expressions(1), vbNullString
+End Sub
+
 Public Sub Then_the_report_output_contains_STR_5A8ED3F2F3C6(example_context As TContext, step_expressions As Collection)
     'Then the report output contains {string}
     TSpec.expect(example_context.get_value("session").reporter.ConsoleOutput).includes_text step_expressions(1)
@@ -68,6 +83,11 @@ End Sub
 Public Sub Then_the_report_output_doesnt_contain_STR_77804E212494(example_context As TContext, step_expressions As Collection)
     'Then the report output doesn't contain {string}
     TSpec.expect(example_context.get_value("session").reporter.ConsoleOutput).does_not_include step_expressions(1)
+End Sub
+
+Public Sub Then_the_report_output_is_STR_7C9B2337B419(example_context As TContext, step_expressions As Collection)
+    'Then the report output is {string}
+    TSpec.expect(ExtraVBA.align_textblock(example_context.get_value("session").reporter.ConsoleOutput)).to_be step_expressions(1) & vbLf
 End Sub
 
 Public Sub Then_line_INT_of_the_resulting_output_is_STR_A434511445AD(example_context As TContext, step_expressions As Collection)
