--- a/source/TReportFormatterVerbose.cls
+++ b/source/TReportFormatterVerbose.cls
@@ -75,17 +75,24 @@ Public Function format_step(step_name As String, status As String, err_msg As St
     Dim formatted_msg As String
     Dim step_lines As Variant
     Dim line_index As Integer
+    Dim is_docstring As Boolean
+    Dim indention As Integer
+    Dim line As String
 
+    is_docstring = False
     step_lines = Split(step_name, vbLf)
     formatted_msg = Space$(4) & " " & status & Space$(10 - 1 - Len(status)) & step_lines(0)
-    'format docstring output if available
-    If UBound(step_lines) > 0 Then
-        formatted_msg = formatted_msg & vbLf & Space$(16) & Trim(step_lines(1))
-        For line_index = 2 To UBound(step_lines) - 1
-            formatted_msg = formatted_msg & vbLf & Space$(18) & step_lines(line_index)
-        Next
-        formatted_msg = formatted_msg & vbLf & Space$(16) & Trim(step_lines(UBound(step_lines)))
-    End If
+    'format docstring and or data table output if available
+    For line_index = 1 To UBound(step_lines)
+        line = Trim(step_lines(line_index))
+        indention = 16
+        If is_docstring Then indention = 18
+        If line = """""""" Then
+            is_docstring = Not is_docstring
+            indention = 16
+        End If
+        formatted_msg = formatted_msg & vbLf & Space$(indention) & line
+    Next
     'add err msg if available
     If err_msg <> vbNullString Then
         formatted_msg = formatted_msg & vbLf & Space$(10) & err_msg
