[refactor] move LastFailMsg from TSpec to TError

--- a/source/TExampleRunner.cls
+++ b/source/TExampleRunner.cls
@@ -48,7 +48,7 @@ Public Sub run_example(example As TExample)
             'step failed -> get the failure message
             err_msg = step_result(1)
             'this is a hack because of the broken exception handling in vba (e.g. vba will overwrite the custom err descriptions)
-            If step_status = STATUS_PENDING Then err_msg = TSpec.LastFailMsg
+            If step_status = STATUS_PENDING Then err_msg = TError.LastFailMsg
         End If
         m_session.statistics.count_event LOG_EVENT_RUN_STEP, step_status, step.OriginalStepDefinition, ExtraVBA.get_unix_timestamp_now
         m_session.reporter.report REPORT_MSG_TYPE_STEP, step.OriginalStepDefinition, step_status, err_msg
